<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>me.twojanazwa</groupId>
  <artifactId>jarusodzialki</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>jarusodzialki</name>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <description>A plugin for Minecraft Spigot server to manage plots.</description>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>placeholderapi-repo</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.19.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.6</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.epsilon</groupId>
      <artifactId>org.eclipse.epsilon.common</artifactId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.epsilon</groupId>
      <artifactId>org.eclipse.epsilon.emc.emf</artifactId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.epsilon</groupId>
      <artifactId>org.eclipse.epsilon.eol.engine</artifactId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.epsilon</groupId>
      <artifactId>org.eclipse.epsilon.egl.engine</artifactId>
      <version>2.8.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
